# Schichtdickenmessung

./: .gitignore  LICENSE  README.md  Schichtdickenmessung.spec  main.py  pyproject.toml  requirements.txt
src/layer_thickness_app/: main.py
src/layer_thickness_app/config/: config.py
src/layer_thickness_app/controller/: main_controller.py
src/layer_thickness_app/gui/: main_window.py  theme.py
src/layer_thickness_app/gui/resources/: dark_theme.qss  light_theme.qss
src/layer_thickness_app/gui/widgets/: calibration_page.py  csv_page.py  help_page.py  history_page.py  home_page.py  measure_page.py  placeholder_page.py  settings_page.py  validation_page.py
src/layer_thickness_app/services/: calculation_service.py  calibration_service.py  camera_service.py  database_service.py  export_service.py  image_stats.py  import_service.py  linearity_service.py  material_profiles.py  material_service.py  msa_service.py  plausibility_service.py  report_service.py
tests/: test_calculation_service.py  test_database_service.py
