[project]
name = "schichtdickenmessung"
version = "0.1.0"
authors = [
  { name="Oliver Klager", email="oliver.klager@stud.hcw.fh-campuswien.ac.at" },
]
description = "An application for measuring layer thickness."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "opencv-python",
  "PyQt6",
  "refractiveindex2",
  "pyueye",
  "PyQt6-Fluent-Widgets",
  "pytubefix"
]
[project.optional-dependencies]
dev = [
  "pytest"
]

[tool.setuptools.packages.find]
where = ["src"]